--- a/templates/base.html
+++ b/templates/base.html
@@ -159,14 +159,14 @@
                 @apply bg-red-600;
             }
             .login-container {
-            display: flex;
+            display: auto;
             justify-content: center;
             align-items: center;
             height: 100vh; 
             }
 
             .login-box {
-                background-color: #f8f9fa; 
+                background-color: #ffffff02; 
                 padding: 20px;
                 border-radius: 10px;
                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
@@ -178,6 +178,7 @@
             .login-form {
                 display: flex;
                 flex-direction: column;
+                width: 30%;
             }
 
             .login-form label {
@@ -188,14 +189,14 @@
             .login-form input {
                 padding: 10px;
                 margin-bottom: 15px;
-                border: 1px solid #ced4da;
+                border: 1px solid #2780da;
                 border-radius: 5px;
             }
 
             .login-form button {
                 padding: 10px;
-                background-color: #007bff;
-                color: white;
+                background-color: #376394;
+                color: rgba(192, 202, 216, 0.699);
                 border: none;
                 border-radius: 5px;
                 cursor: pointer;
