--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -2,21 +2,79 @@
 
 {% block content %}
 
-{% for item in items %}
 
-<article class="card">
-    <div class="flex items-center justify-between px-4 h-14">
-        <h3 class="text-start leading-5 mr-1">{{ item.name }}</h3>
-    </div>
-    <div class="flex items-center justify-between px-4 h-14">
-        <h3 class="text-start leading-5 mr-1">{{ item.item_status }}</h3>
-    </div>
-    <div class="flex items-center justify-between px-4 h-14">
-        <h3 class="text-start leading-5 mr-1">{{ item.quantity }}</h3>
-    </div>
+<style>
+    .box {
+        margin-bottom: 20px;
+        background-color: rgb(216, 217, 223);
+        padding: 20px;
+        border-radius: 10px;
+        overflow: auto;;
+    }
+    .container {
+        display: flex;
+        flex-direction: row;
+        gap: 20px; 
+        padding: 20px;
+        background-color: #f8f8f8;
+    }
+
+</style>
+
+<div class="container">
+    <article class="card box">
+        
+        <h2>User Details</h2>
+       
+        <section>
+            <div class="flex items-center justify-between px-4 h-14 border border-gray-300 rounded-lg p-2 mb-2">
+                <h3 class="text-start leading-5 mr-1">{{ user.first_name }}</h3>
+            </div>
+        </section>
+        <section>
+            <div class="flex items-center justify-between px-4 h-14">
+                <h3 class="text-start leading-5 mr-1">{{ user.email }}</h3>
+            </div>
+        </section>
+    </article>
+     
     
-</article>   
+    <article class="card box">
+        <h2>Items</h2>
+        {% for item in items %}
+        <section>
+            <div class="flex items-center justify-between px-4 h-14 border border-gray-300 rounded-lg p-2 mb-2">
+                <h3 class="text-start leading-5 mr-1">{{ item.name }}</h3>
+            </div>
+        </section>
+        <section>
+            <div class="flex items-center justify-between px-4 h-14">
+                <h3 class="text-start leading-5 mr-1">{{ item.item_status }}</h3>
+            </div>
+        </section>
+        <section>
+            <div class="flex items-center justify-between px-4 h-14">
+                <h3 class="text-start leading-5 mr-1">{{ item.quantity }}</h3>
+            </div>
+        </section>
+        {% endfor %}
+    </article>
 
-{% endfor%}
+    <article class="card box">
+        <section>
+            <h2>Item Requests</h2>
+            <div class="flex items-center justify-between px-4 h-14 border border-gray-300 rounded-lg p-2 mb-2">
+                <h3 class="text-start leading-5 mr-1">{{ request.id }}</h3>
+            </div>
+        </section>
+        <section>
+            <div class="flex items-center justify-between px-4 h-14">
+                <h3 class="text-start leading-5 mr-1">{{ request.status }}</h3>
+            </div>
+        </section>
+    </article>
+</div>
+ 
+
 
 {% endblock content %}
