--- a/templates/app/register.html
+++ b/templates/app/register.html
@@ -1,5 +1,12 @@
-{% extends 'layouts/a.html' %}
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Login</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss@3.2.7/dist/tailwind.min.css"></script>
+    </head>
 
 <style>
     .login-container {
