fix: update project structure - limoo Todo - add css

--- a/templates/base.html
+++ b/templates/base.html
@@ -290,8 +290,10 @@
         </style>
     </head>
     <body class="bg-gray-100">
-        {% include 'includes/header.html' %}
-        {% include 'includes/sidebar.html' %}
+
+        {% block layout %}
+
+		{% endblock layout %}
         
     </body>
 
