--- a/templates/app/item_requests.html
+++ b/templates/app/item_requests.html
@@ -25,12 +25,16 @@
 
     <article class="card box" id="item-req">
         <section>
-            <h2>Dashboard Coming Soon</h2>
+            <h2>Item Requests</h2>
             <div class="flex items-center justify-between px-4 h-14 border border-gray-300 rounded-lg p-2 mb-2">
                 <h3 class="text-start leading-5 mr-1">{{ request.id }}</h3>
             </div>
         </section>
- 
+        <section>
+            <div class="flex items-center justify-between px-4 h-14">
+                <h3 class="text-start leading-5 mr-1">{{ request.status }}</h3>
+            </div>
+        </section>
     </article>
     
 </div>
