--- a/templates/app/items.html
+++ b/templates/app/items.html
@@ -23,16 +23,27 @@
 
 <div class="container">
 
-    <article class="card box" id="item-req">
+    <article class="card box" id="-all-items">
+        <h2>Items</h2>
+        {% for item in items %}
         <section>
-            <h2>Dashboard Coming Soon</h2>
             <div class="flex items-center justify-between px-4 h-14 border border-gray-300 rounded-lg p-2 mb-2">
-                <h3 class="text-start leading-5 mr-1">{{ request.id }}</h3>
+                <h3 class="text-start leading-5 mr-1">{{ item.name }}</h3>
             </div>
         </section>
- 
+        <section>
+            <div class="flex items-center justify-between px-4 h-14">
+                <h3 class="text-start leading-5 mr-1">{{ item.item_status }}</h3>
+            </div>
+        </section>
+        <section>
+            <div class="flex items-center justify-between px-4 h-14">
+                <h3 class="text-start leading-5 mr-1">{{ item.quantity }}</h3>
+            </div>
+        </section>
+        {% endfor %}
     </article>
-    
+
 </div>
  
 
