--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -6,7 +6,17 @@
         <section>
             <div>
                 <ul class="hoverlist">
-                    <a href="">
+                    <a href="{% url 'home' %}">
+                        <span class="font-bold text-sm">Home</span>
+                    </a>
+                </ul>
+            </div>
+        </section>
+
+        <section></section>
+            <div>
+                <ul class="hoverlist">
+                    <a href="{% url 'users' %}">
                         <span class="font-bold text-sm">Users</span>
                     </a>
                 </ul>
@@ -16,17 +26,18 @@
         <section>
             <div>
                 <ul class="hoverlist">
-                    <a href="">
+                    <a href="{% url 'items' %}">
                         <span class="font-bold text-sm">Items</span>
                     </a>
                 </ul>
             </div>
         </section>
+
         
         <section>
             <div>
                 <ul class="hoverlist">
-                    <a href="">
+                    <a href="{% url 'item-requests' %}">
                         <span class="font-bold text-sm">Items Request</span>
                     </a>
                 </ul>
