add users.html, add items.html, item-requests

--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -1,8 +1,5 @@
 {% extends 'layouts/a.html' %}
-
 {% block content %}
-
-
 <style>
     .box {
         margin-bottom: 20px;
@@ -21,6 +18,7 @@
 
 </style>
 
+<body>
 <div class="container">
     <article class="card box">
         
@@ -75,6 +73,6 @@
     </article>
 </div>
  
-
+</body>
 
 {% endblock content %}
