--- a/templates/app/item_requests.html
+++ b/templates/app/item_requests.html
@@ -2,37 +2,18 @@
 
 {% block content %}
 
-
-<style>
-    .box {
-        margin-bottom: 20px;
-        background-color: rgb(216, 217, 223);
-        padding: 20px;
-        border-radius: 10px;
-        overflow: auto;;
-    }
-    .container {
-        display: flex;
-        flex-direction: row;
-        gap: 20px; 
-        padding: 20px;
-        background-color: #f8f8f8;
-    }
-
-</style>
-
 <div class="container">
 
-    <article class="card box" id="item-req">
+    <article class="content">
         <section>
             <h2>Item Requests</h2>
             <div class="flex items-center justify-between px-4 h-14 border border-gray-300 rounded-lg p-2 mb-2">
-                <h3 class="text-start leading-5 mr-1">{{ request.id }}</h3>
+                <h3 class="text-start leading-5 mr-1">{{ item_requests.id }}</h3>
             </div>
         </section>
         <section>
             <div class="flex items-center justify-between px-4 h-14">
-                <h3 class="text-start leading-5 mr-1">{{ request.status }}</h3>
+                <h3 class="text-start leading-5 mr-1">{{ item_requests.status }}</h3>
             </div>
         </section>
     </article>
