--- a/templates/app/items.html
+++ b/templates/app/items.html
@@ -3,44 +3,37 @@
 {% block content %}
 
 
-<style>
-    .box {
-        margin-bottom: 20px;
-        background-color: rgb(216, 217, 223);
-        padding: 20px;
-        border-radius: 10px;
-        overflow: auto;;
-    }
-    .container {
-        display: flex;
-        flex-direction: row;
-        gap: 20px; 
-        padding: 20px;
-        background-color: #f8f8f8;
-    }
-
-</style>
-
 <div class="container">
 
-    <article class="card box" id="-all-items">
+    <article class="content">
         <h2>Items</h2>
         {% for item in items %}
-        <section>
-            <div class="flex items-center justify-between px-4 h-14 border border-gray-300 rounded-lg p-2 mb-2">
-                <h3 class="text-start leading-5 mr-1">{{ item.name }}</h3>
-            </div>
-        </section>
-        <section>
-            <div class="flex items-center justify-between px-4 h-14">
-                <h3 class="text-start leading-5 mr-1">{{ item.item_status }}</h3>
-            </div>
-        </section>
-        <section>
-            <div class="flex items-center justify-between px-4 h-14">
-                <h3 class="text-start leading-5 mr-1">{{ item.quantity }}</h3>
-            </div>
-        </section>
+        
+        <table class="table-auto w-full border-collapse border border-gray-300">
+            <thead>
+                <tr>
+                    <th  class="border border-gray-300 px-4 py-2 text-left">Field</th>
+                    <th class="border border-gray-300 px-4 py-2 text-left">Value</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="border border-gray-300 px-4 py-2">Name</td>
+                    <td class="border border-gray-300 px-4 py-2">{{ item.name }}</td>
+                </tr>
+                <tr>
+                    <td class="border border-gray-300 px-4 py-2">Item Status</td>
+                    <td class="border border-gray-300 px-4 py-2">{{ item.item_status }}</td>
+                </tr>  
+                <tr>
+                    <td class="border border-gray-300 px-4 py-2">quantity</td>
+                    <td class="border border-gray-300 px-4 py-2">{{ item.quantity }}</td>
+                </tr>                   
+            </tbody>           
+        </table>
+        
+
+        
         {% endfor %}
     </article>
 
