--- a/templates/app/users.html
+++ b/templates/app/users.html
@@ -1,44 +1,31 @@
 {% extends 'layouts/a.html' %}
-
 {% block content %}
 
-
-<style>
-    .box {
-        margin-bottom: 20px;
-        background-color: rgb(216, 217, 223);
-        padding: 20px;
-        border-radius: 10px;
-        overflow: auto;;
-    }
-    .container {
-        display: flex;
-        flex-direction: row;
-        gap: 20px; 
-        padding: 20px;
-        background-color: #f8f8f8;
-    }
-
-</style>
-
-<div class="container">
-    <article class="card box" id="user-details">
+    <div class = "container">
+        <article class="content">
+            
+            <h2>User Details</h2>
+            <table class="table-auto w-full border border-gray-300">
+                <thead>
+                    <tr>
+                        <th  class="border border-gray-300 px-4 py-2 text-left">Field</th>
+                        <th class="border border-gray-300 px-4 py-2 text-left">Value</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="border border-gray-300 px-4 py-2">First Name</td>
+                        <td class="border border-gray-300 px-4 py-2">{{ user.first_name }}</td>
+                    </tr>
+                    <tr>
+                        <td class="border border-gray-300 px-4 py-2">Email</td>
+                        <td class="border border-gray-300 px-4 py-2">{{ user.email }}</td>
+                    </tr>                    
+                </tbody>           
+            </table>
         
-        <h2>User Details</h2>
-       
-        <section>
-            <div class="flex items-center justify-between px-4 h-14 border border-gray-300 rounded-lg p-2 mb-2">
-                <h3 class="text-start leading-5 mr-1">{{ user.first_name }}</h3>
-            </div>
-        </section>
-        <section>
-            <div class="flex items-center justify-between px-4 h-14">
-                <h3 class="text-start leading-5 mr-1">{{ user.email }}</h3>
-            </div>
-        </section>
-    </article>
-</div>
- 
+        </article>
+    </div>
 
 
 {% endblock content %}
