--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -3,7 +3,7 @@
     <div class="flex items-center justify-between h-20">
         <logo>
             <a class="flex items-center gap-1" href="/">
-            <span class="text-lg font-bold"><h2>Inventory Management System</h2></span>
+                <span class="text-lg font-bold"><h2>Inventory Management System</h2></span>
             </a>
         </logo>
         <mobileicon class="md:hidden">
@@ -26,14 +26,14 @@
             <li x-data="{ dropdownOpen: false }" class="relative">
                 <a @click="dropdownOpen = !dropdownOpen" @click.away="dropdownOpen = false" class="cursor-pointer select-none">
                     <img class="h-8 w-8 rounded-full object-cover" src="https://pbs.twimg.com/profile_images/508601156767997952/fFTdKUf2_400x400.jpeg"/>
-                    Tendo
+                    {{request.user}}
                     <img x-bind:class="dropdownOpen && 'rotate-180 duration-300'" class="w-4" src="https://img.icons8.com/small/32/777777/expand-arrow.png"/>
                 </a>
                 <div x-show="dropdownOpen" x-cloak class="absolute right-0 bg-white text-black shadow rounded-lg w-40 p-2 z-20"
                     x-transition:enter="duration-300 ease-out"
                     x-transition:enter-start="opacity-0 -translate-y-5 scale-90"
                     x-transition:enter-end="opacity-100 translate-y-0 scale-100">
-                    <ul class="hoverlist [&>li>a]:justify-end">
+                    <ul class="hoverlist">
                         <li><a href="#">My Profile</a></li>
                         <li><a href="#">Edit Profile</a></li>
                         <li><a href="#">Log Out</a></li>
