--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,8 +1,5 @@
-<aside x-cloak class="md:!block col-span-full md:col-span-1 lg:mr-[20%] order-1 md:order-2"
-    x-transition:enter="duration-300 ease-out"
-    x-transition:enter-start="opacity-0 -mt-96"
-    x-transition:enter-end="opacity-100 mt-0">
-    <div class="aside p-4 flex flex-col space-y-4">
+<aside class="aside" >
+    <div class="p-4 flex flex-col space-y-4">
         <section>
             <div>
                 <ul class="hoverlist">
@@ -13,7 +10,7 @@
             </div>
         </section>
 
-        <section></section>
+        <section>
             <div>
                 <ul class="hoverlist">
                     <a href="{% url 'users' %}">
@@ -37,8 +34,8 @@
         <section>
             <div>
                 <ul class="hoverlist">
-                    <a href="{% url 'item-requests' %}">
-                        <span class="font-bold text-sm">Items Request</span>
+                    <a href="{% url 'item_requests' %}">
+                        <span class="font-bold text-sm">Items Requests</span>
                     </a>
                 </ul>
             </div>
