--- a/templates/layouts/a.html
+++ b/templates/layouts/a.html
@@ -3,9 +3,11 @@
 {% block layout %}
 
 {% include 'includes/header.html' %}
+<main class="main">
 {% include 'includes/sidebar.html' %}
 
 {% block content %}
-{% endblock content %}
 
+{% endblock content %}
+</main>
 {% endblock %}
