commit all changes

--- a/templates/app/users.html
+++ b/templates/app/users.html
@@ -14,8 +14,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="border border-gray-300 px-4 py-2">First Name</td>
-                        <td class="border border-gray-300 px-4 py-2">{{ user.first_name }}</td>
+                        <td class="border border-gray-300 px-4 py-2">Name</td>
+                        <td class="border border-gray-300 px-4 py-2">{{ user.username }}</td>
                     </tr>
                     <tr>
                         <td class="border border-gray-300 px-4 py-2">Email</td>
