--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -1,7 +1,14 @@
 {% extends 'layouts/a.html' %}
 {% block content %}
 <div class="container">
-    <h2>Content Page</h2>
+    <h2>Dashboard</h2>
+    <div>
+        <h3>Statistics</h3>
+        <p>Total Registered Users: {{ user_count }}</p>
+        <p>Total Items Added: {{ item_count }}</p>
+        <p>Total Items Requests: {{ item_request_count }}</p>
+
+    </div>
 
 </div>
 {% endblock content %}
