--- a/templates/app/item_requests.html
+++ b/templates/app/item_requests.html
@@ -3,23 +3,24 @@
 {% block content %}
 
 <div class="container">
-
     <article class="content">
-        <section>
-            <h2>Item Requests</h2>
-            <div class="flex items-center justify-between px-4 h-14 border border-gray-300 rounded-lg p-2 mb-2">
-                <h3 class="text-start leading-5 mr-1">{{ item_requests.id }}</h3>
-            </div>
-        </section>
-        <section>
-            <div class="flex items-center justify-between px-4 h-14">
-                <h3 class="text-start leading-5 mr-1">{{ item_requests.status }}</h3>
-            </div>
-        </section>
+        <h2>Item Requests</h2>
+        <table class="table-auto w-full border-collapse border border-gray-300">
+            <thead>
+                <tr>
+                    <th  class="border border-gray-300 px-4 py-2 text-left">Field</th>
+                    <th class="border border-gray-300 px-4 py-2 text-left">Value</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="border border-gray-300 px-4 py-2">Item Request</td>
+                    <td class="border border-gray-300 px-4 py-2">{{ item_request.request_status }}</td>
+                </tr>
+                                   
+            </tbody>           
+        </table>
     </article>
-    
 </div>
- 
-
 
 {% endblock content %}
