commit all changes

--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -4,9 +4,9 @@
     <h2>Dashboard</h2>
     <div>
         <h3>Statistics</h3>
-        <p>Total Registered Users: {{ user_count }}</p>
-        <p>Total Items Added: {{ item_count }}</p>
-        <p>Total Items Requests: {{ item_request_count }}</p>
+        <p>Total Inventories: </p>
+        <p>Total Requests: </p>
+        <p>Total Restocks: </p>
 
     </div>
 
