--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -14,10 +14,8 @@
         </mobileicon>
     </div>
 
-    <nav x-show="mobilenavOpen" x-cloak class="md:!block bg-gray-800 h-screen w-screen md:h-auto md:w-auto -mt-20 md:mt-0 absolute md:relative z-[-1]"
-        x-transition:enter="duration-300 ease-out"
-        x-transition:enter-start="opacity-0 -translate-y-96"
-        x-transition:enter-end="opacity-100 translate-y-0">
+    <nav x-show="mobilenavOpen" x-cloak class="md:!block bg-gray-800 h-screen w-screen md:h-auto md:w-auto -mt-20 md:mt-0 absolute md:relative z-[-1]">
+        
         <ul class="flex items-center navitems flex-col md:flex-row gap-8 md:gap-0 justify-center h-full -translate-y-10 md:translate-y-0">
             {% if user.is_authenticated %}
             <li><a href="/">Home</a></li>
@@ -29,14 +27,12 @@
                     {{request.user}}
                     <img x-bind:class="dropdownOpen && 'rotate-180 duration-300'" class="w-4" src="https://img.icons8.com/small/32/777777/expand-arrow.png"/>
                 </a>
-                <div x-show="dropdownOpen" x-cloak class="absolute right-0 bg-white text-black shadow rounded-lg w-40 p-2 z-20"
-                    x-transition:enter="duration-300 ease-out"
-                    x-transition:enter-start="opacity-0 -translate-y-5 scale-90"
-                    x-transition:enter-end="opacity-100 translate-y-0 scale-100">
+                <div x-show="dropdownOpen" x-cloak class="absolute right-0 bg-white text-black shadow">
                     <ul class="hoverlist">
                         <li><a href="#">My Profile</a></li>
                         <li><a href="#">Edit Profile</a></li>
                         <li><a href="#">Log Out</a></li>
+                        <li><a href="#">Password Reset</a></li>
                     </ul>
                 </div>
             </li>
