--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -11,34 +11,35 @@
         </section>
 
         <section>
-            <div>
-                <ul class="hoverlist">
-                    <a href="{% url 'users' %}">
-                        <span class="font-bold text-sm">Users</span>
-                    </a>
-                </ul>
-            </div>
+            <ul class="hoverlist">
+                <a href="{% url 'users' %}">
+                    <span class="font-bold text-sm">Users</span>
+                </a>
+            </ul>
         </section>
         
         <section>
-            <div>
-                <ul class="hoverlist">
-                    <a href="{% url 'items' %}">
-                        <span class="font-bold text-sm">Items</span>
-                    </a>
-                </ul>
-            </div>
+            <ul class="hoverlist">
+                <a href="{% url 'items' %}">
+                    <span class="font-bold text-sm">Items</span>
+                </a>
+            </ul>
+        </section>
+        
+        <section>
+            <ul class="hoverlist">
+                <a href="{% url 'item_requests' %}">
+                    <span class="font-bold text-sm">Items Requests</span>
+                </a>
+            </ul>
         </section>
 
-        
         <section>
-            <div>
-                <ul class="hoverlist">
-                    <a href="{% url 'item_requests' %}">
-                        <span class="font-bold text-sm">Items Requests</span>
-                    </a>
-                </ul>
-            </div>
+            <ul class="hoverlist">
+                <a href="#">
+                    <span class="font-bold text-sm">Settings</span>
+                </a>
+            </ul>
         </section>
         
     </div>
