--- a/templates/app/item_requests.html
+++ b/templates/app/item_requests.html
@@ -8,13 +8,11 @@
         <table class="table-auto w-full border-collapse border border-gray-300">
             <thead>
                 <tr>
-                    <th  class="border border-gray-300 px-4 py-2 text-left">Field</th>
-                    <th class="border border-gray-300 px-4 py-2 text-left">Value</th>
+                    <th  class="border border-gray-300 px-4 py-2 text-left">Item Request</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td class="border border-gray-300 px-4 py-2">Item Request</td>
                     <td class="border border-gray-300 px-4 py-2">{{ item_request.request_status }}</td>
                 </tr>
                                    
