--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -1,14 +1,4 @@
 {% extends 'layouts/a.html' %}
 {% block content %}
-<div class="container">
-    <h2>Dashboard</h2>
-    <div>
-        <h3>Statistics</h3>
-        <p>Total Inventories: </p>
-        <p>Total Requests: </p>
-        <p>Total Restocks: </p>
-
-    </div>
-
-</div>
+<h1>Welcome to Inventory Management System</h1>
 {% endblock content %}
