--- a/templates/app/items.html
+++ b/templates/app/items.html
@@ -5,27 +5,24 @@
 
 <div class="container">
     <article class="content">
-        <h2>Items</h2>
+        <div class="flex items-center justify-between">
+            <h2>Items</h2>
+            <button class="mb-auto bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Create Item</button>
+        </div>
         <table class="table-auto w-full border-collapse border border-gray-300">
             <thead>
                 <tr>
-                    <th  class="border border-gray-300 px-4 py-2 text-left">Field</th>
-                    <th class="border border-gray-300 px-4 py-2 text-left">Value</th>
+                    <th class="border border-gray-300 px-4 py-2 text-left">Name</th>
+                    <th class="border border-gray-300 px-4 py-2 text-left">Item Status</th>
+                    <th class="border border-gray-300 px-4 py-2 text-left">Item Quantity</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td class="border border-gray-300 px-4 py-2">Name</td>
                     <td class="border border-gray-300 px-4 py-2">{{ item.name }}</td>
-                </tr>
-                <tr>
-                    <td class="border border-gray-300 px-4 py-2">Item Status</td>
                     <td class="border border-gray-300 px-4 py-2">{{ item.item_status }}</td>
-                </tr>  
-                <tr>
-                    <td class="border border-gray-300 px-4 py-2">quantity</td>
                     <td class="border border-gray-300 px-4 py-2">{{ item.quantity }}</td>
-                </tr>                   
+                </tr>                 
             </tbody>           
         </table>
     </article>
