--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,10 +1,11 @@
 <aside class="aside" >
     <div class="p-4 flex flex-col space-y-4">
+       
         <section>
             <div>
                 <ul class="hoverlist">
-                    <a href="{% url 'home' %}">
-                        <span class="font-bold text-sm">Home</span>
+                    <a href="{% url 'dashboard' %}">
+                        <span class="font-bold text-sm">Dashboard</span>
                     </a>
                 </ul>
             </div>
@@ -30,6 +31,14 @@
             <ul class="hoverlist">
                 <a href="{% url 'item_requests' %}">
                     <span class="font-bold text-sm">Items Requests</span>
+                </a>
+            </ul>
+        </section>
+
+        <section></section>
+            <ul class="hoverlist">
+                <a href="{% url 'restocks' %}">
+                    <span class="font-bold text-sm">Restocks</span>
                 </a>
             </ul>
         </section>
