--- a/templates/app/items.html
+++ b/templates/app/items.html
@@ -2,12 +2,11 @@
 
 {% block content %}
 
-
 <div class="container">
     <article class="content">
         <div class="flex items-center justify-between">
             <h2>Items</h2>
-            <button class="mb-auto bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Create Item</button>
+            <button class="mb-auto bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"><a href="{% url 'create_items' %}">Create Item</a></button>
         </div>
         <table class="table-auto w-full border-collapse border border-gray-300">
             <thead>
