--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@
 
         .aside {
             background-color: gray;
-            height: 100svh;
+            height: 100vh;
             width: 20%;
             color: white;
         }
@@ -115,7 +115,7 @@
             
         }
         .statcard >h3 {
-            border-bottom: rgb(175, 175, 199) solid 2px;
+            border-bottom: rgb(175, 175, 199) solid 1px;
             padding: 20px;
         }
         .statcard >p {
@@ -271,7 +271,6 @@
             width: 100%; 
         }
         .content {
-            background-color: white;
             padding: 20px; 
             border-radius: 10px; 
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); 
