--- a/templates/base.html
+++ b/templates/base.html
@@ -89,18 +89,18 @@
         }
 
         .aside {
-            background-color: gray;
+            background-color: rgb(7, 1, 88);
             height: 100vh;
             width: 20%;
             color: white;
         }
 
         .aside:hover {
-            background-color: rgb(121, 117, 117);
+            background-color: rgb(20, 13, 105);
         }
 
         .statcard {
-            background-color: white;
+            background-color: rgba(28, 27, 44, 0.158);
             display: flex;
             flex-direction: column;
             text-align: center;
@@ -111,7 +111,6 @@
             display: flex;
             justify-content: space-around;
             background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-            border: solid 1px rgb(175, 175, 199);
             
         }
         .statcard >h3 {
