--- a/templates/app/create_items.html
+++ b/templates/app/create_items.html
@@ -3,7 +3,7 @@
 
 <body class="background-color: #f0f0f0">
     <div class="login-container">
-        <form class="login-form" method="post" action="{% url 'items' %}">
+        <form class="login-form" method="POST" action="{% url 'items' %}">
             <h2 class="text-2xl font-bold text-center mb-6">Create Items</h2>
             {% csrf_token %}
             {{ form.as_p }}
