--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -30,7 +30,7 @@
         <section>
             <ul class="hoverlist">
                 <a href="{% url 'item_requests' %}">
-                    <span class="font-bold text-sm">Items Requests</span>
+                    <span class="font-bold text-sm">Item Requests</span>
                 </a>
             </ul>
         </section>
