--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -1,9 +1,11 @@
 {% extends 'layouts/a.html' %}
 {% block content %}
 <div class="container">
-    <h2>Dashboard</h2>
-    <div>
+    <div class="text-center pb-5">
+        <h2>Dashboard</h2>
         <h3>Statistics</h3>
+    </div>
+    <div>
         <div class="statcontainer">
             <div class="statcard"> 
                 <h3>Total Inventories</h3>
