--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -1,4 +1,26 @@
 {% extends 'layouts/a.html' %}
 {% block content %}
-<h1>Welcome to Inventory Management System</h1>
+<div class="container">
+    <div class="text-center pb-5">
+        <h2>Dashboard</h2>
+        <h3>Statistics</h3>
+    </div>
+    <div>
+        <div class="statcontainer">
+            <div class="statcard"> 
+                <h3>Total Inventories</h3>
+                <p>35</p>
+            </div>
+            <div class="statcard"> 
+                <h3>Total Requests</h3>
+                <p>4</p>
+            </div>
+            <div class="statcard"> 
+                <h3>Total Restocks</h3>
+                <p>9</p>
+            </div>
+        </div>
+    </div>
+
+</div>
 {% endblock content %}
