--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -13,8 +13,8 @@
 
         <section>
             <ul class="hoverlist">
-                <a href="{% url 'users' %}">
-                    <span class="font-bold text-sm">Users</span>
+                <a href="{% url 'staff' %}">
+                    <span class="font-bold text-sm">Staff</span>
                 </a>
             </ul>
         </section>
