--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -22,5 +22,9 @@
         </div>
     </div>
 
+<div class="text-center pb-5 pt-5">
+    <h2><b>Inventory Report</b></h2>
+
+</div>
 </div>
 {% endblock content %}
