--- a/templates/base.html
+++ b/templates/base.html
@@ -104,6 +104,7 @@
             display: flex;
             flex-direction: column;
             text-align: center;
+            border-radius: 10%;
             font-family: Arial, Helvetica, sans-serif;
         }
         
