--- a/templates/app/create_staff.html
+++ b/templates/app/create_staff.html
@@ -3,7 +3,7 @@
 
 <body class="background-color: #f0f0f0">
     <div class="login-container">
-        <form class="login-form" action="{% url 'staff' %}" method="POST">
+        <form class="login-form" action="{% url 'create_staff' %}" method="POST">
             <h2 class="text-2xl font-bold text-center mb-6">Create Staff</h2>
             {% csrf_token %}
             {{ form.as_p }}
