--- a/templates/app/staff.html
+++ b/templates/app/staff.html
@@ -4,8 +4,8 @@
     <div class = "container">
         <article class="content">
             <div class="flex items-center justify-between">
-                <h2>User Details</h2>
-                <button class="mb-auto bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"><a href="{% url 'create_staff' %}">Create Users</a></button>
+                <h2>Staff Details</h2>
+                <button class="mb-auto bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"><a href="{% url 'create_staff' %}">Create Staff</a></button>
             </div>
             <table class="table-auto w-full border border-gray-300">
                 <thead>
@@ -18,6 +18,7 @@
                     </tr>
                 </thead>
                 <tbody>
+                    {% for staff in staff %}
                     <tr>
                         <td class="border border-gray-300 px-4 py-2">{{ staff.first_name }}</td>
                         <td class="border border-gray-300 px-4 py-2">{{ staff.last_name }}</td>
@@ -25,10 +26,9 @@
                         <td class="border border-gray-300 px-4 py-2">{{ staff.phone_number }}</td>
                         <td class="border border-gray-300 px-4 py-2">{{ staff.department }}</td>
                     </tr>
-                                      
+                    {% endfor %}               
                 </tbody>           
             </table>
         </article>
     </div>
-
 {% endblock content %}
